[gd_scene load_steps=2 format=3 uid="uid://b1lotxo3wsim7"]

[ext_resource type="Script" path="res://UI/ItemInfo.gd" id="1_jsqek"]

[node name="ItemInfo" type="Node2D"]
script = ExtResource("1_jsqek")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -192.0
offset_right = 80.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][color=crimson]{name}[/color][/center]"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ItemDescription" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Weapon Description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ItemStory" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Weapon story
"
horizontal_alignment = 1
autowrap_mode = 1
